dataset1235/2025-2/805158916/users/1651421245/executions/2651470117_2383239197.log
== SUBMISSION (2025-08-27 03:55:15)
-- CODE: 
distanA = float(input("digite a distancia a"))
distanB = float(input("digite a distancia b"))
distanC = float(input("digite a distancia c"))
import math
ang = math.radians(angAB)
c =(math.sqrt(distanA**2+ distanB**2 - 2*distanA*distanB*math.cos(ang)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:57:53)
-- CODE: 
distanA = float(input("digite a distancia a"))
distanB = float(input("digite a distancia b"))
angAB = float(input("digite o angulo entre a e b"))
import math
ang = math.radians(angAB)
c =(math.sqrt(distanA**2+ distanB**2 - 2*distanA*distanB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:55:13)
-- CODE: 
distanA = float(input("digite a distancia a"))
distanB = float(input("digite a distancia b"))
distanC = float(input("digite a distancia c"))
import math
ang = math.radians(angAB)
c =(math.sqrt(distanA**2+ distanB**2 - 2*distanA*distanB*math.cos(ang)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:56:14)
-- CODE: 
distanA = float(input("digite a distancia a"))
distanB = float(input("digite a distancia b"))
distanC = float(input("digite a distancia c"))
import math
ang = math.radians(angAB)
c =(math.sqrt(distanA**2+ distanB**2 - 2*distanA*distanB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:57:15)
-- CODE: 
distanA = float(input("digite a distancia a"))
distanB = float(input("digite a distancia b"))
ang = float(input("digite o angulo entre a e b"))
import math
ang = math.radians(angAB)
c =(math.sqrt(distanA**2+ distanB**2 - 2*distanA*distanB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:56:11)
-- CODE: 
distanA = float(input("digite a distancia a"))
distanB = float(input("digite a distancia b"))
distanC = float(input("digite a distancia c"))
import math
ang = math.radians(angAB)
c =(math.sqrt(distanA**2+ distanB**2 - 2*distanA*distanB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:57:20)
-- CODE: 
distanA = float(input("digite a distancia a"))
distanB = float(input("digite a distancia b"))
ang = float(input("digite o angulo entre a e b"))
import math
ang = math.radians(angAB)
c =(math.sqrt(distanA**2+ distanB**2 - 2*distanA*distanB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:57:52)
-- CODE: 
distanA = float(input("digite a distancia a"))
distanB = float(input("digite a distancia b"))
angAB = float(input("digite o angulo entre a e b"))
import math
ang = math.radians(angAB)
c =(math.sqrt(distanA**2+ distanB**2 - 2*distanA*distanB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
digite a distancia adigite a distancia bdigite o angulo entre a e b9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:57:19)
-- CODE: 
distanA = float(input("digite a distancia a"))
distanB = float(input("digite a distancia b"))
ang = float(input("digite o angulo entre a e b"))
import math
ang = math.radians(angAB)
c =(math.sqrt(distanA**2+ distanB**2 - 2*distanA*distanB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = math.radians(angAB)
                       ^^^^^
NameError: name 'angAB' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
